# lifeproj

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: DESIGN.md
src/lifeproj/: __init__.py  __main__.py  archive.py  cli.py  equip.py  intake.py  modules.py  osavul.py  overview.py  registry.py  scaffold.py  templates.py
src/lifeproj/data/skills/humanize/: SKILL.md
tests/: test_archive.py  test_cli.py  test_equip.py  test_osavul.py  test_registry.py  test_scaffold.py
